--- a/htm/home.htm
+++ b/htm/home.htm
@@ -70,17 +70,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" id="Cabo USB">
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/cable-rock-nylon.jpg" class="img-responsive img-rounded" alt="Cabo USB MFI Lightning Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/4-min.jpg" class="img-responsive img-rounded" alt="Cabo USB MFI Lightning Apple">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" id="Cabo USB">
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/usb_2-min.jpg" class="img-responsive img-rounded" alt="Cabo USB Lightning Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/5-min.jpg" class="img-responsive img-rounded" alt="Cabo USB Lightning Apple">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" id="Cabo USB">
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/cable-rock-pvc-min.jpg" class="img-responsive img-rounded" alt="Cabo USB MFI Lightning Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/6-min.jpg" class="img-responsive img-rounded" alt="Cabo USB MFI Lightning Apple">
               </a>
             </div>
             <div class="col-sm-3">
@@ -106,17 +106,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods">
-                <img width="464px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/earpods_7-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="464px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/1-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
               </a>
             </div>
             <div class="col-sm-3 img-hover"> 
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods"> 
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/earpods_1-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/2-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods">
-                <img width="462px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/earpods_2-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="462px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/3-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
               </a>
             </div>
             <div class="col-sm-3">
@@ -141,17 +141,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" id="Case Rock">
-                <img width="452px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/10-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
+                <img width="452px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/7-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" id="Case Rock">
-                <img width="452px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/0-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
+                <img width="452px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/8-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" id="Case Rock">
-                <img width="451px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/case-motomo-rock-iphone-7-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
+                <img width="451px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/9-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
@@ -177,17 +177,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" id="Pelicula Anti-Spy">
-                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/3-3-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
+                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/10-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" id="Pelicula Anti-Spy">
-                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/2-2-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
+                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/11-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" id="Pelicula Anti-Spy">
-                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/1-1-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
+                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/12-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
               </a>
             </div>
             <div class="col-sm-3">
