--- a/htm/home.htm
+++ b/htm/home.htm
@@ -106,17 +106,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods">
-                <img width="464px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/1-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="464px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/2-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
               </a>
             </div>
             <div class="col-sm-3 img-hover"> 
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods"> 
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/2-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/3-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods">
-                <img width="462px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/3-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="462px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/1-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
               </a>
             </div>
             <div class="col-sm-3">
@@ -146,19 +146,19 @@
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" id="Case Rock">
-                <img width="452px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/8-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
+                <img width="452px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/9-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" id="Case Rock">
-                <img width="451px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/9-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
+                <img width="451px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/8-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <div class="specifications">
                 <p><span class="glyphicon glyphicon-cog"></span> <strong>Especifica&ccedil;&otilde;es:</strong></p><br/>
                 <ul>
-                  <li>Constru&iacute;das em PC/TPU</li>
+                  <li>Constru&iacute;da em PC/TPU</li>
                   <li>Resistente &agrave; corros&atilde;o, desgaste e sujeira</li>
                   <li>Dispon&iacute;vel em 6 cores: Champagne-Gold, Navy-Blue, Iron-Gray, Rose-Gold, Red e Black</li>
                   <li>Dispon&iacute;vel para iPhone 5, 5s, SE, 6, 6s, 6s Plus, 7 e 7 Plus</li>
@@ -182,12 +182,12 @@
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" id="Pelicula Anti-Spy">
-                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/11-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
+                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/12-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" id="Pelicula Anti-Spy">
-                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/12-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
+                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/11-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
               </a>
             </div>
             <div class="col-sm-3">
@@ -195,7 +195,7 @@
                 <p><span class="glyphicon glyphicon-cog"></span> <strong>Especifica&ccedil;&otilde;es:</strong></p><br/>
                 <ul>
                   <li>Filme de vidro temperado</li>
-                  <li>Espessura de 0.21 a 0.33mm</li>
+                  <li>Espessura de 0.21mm a 0.33mm</li>
                   <li>Dureza de 9H</li>
                   <li>Resistente a riscos e impactos</li>
                   <li>Superf&iacute;cie anti-&oacute;leo</li>
