--- a/htm/home.htm
+++ b/htm/home.htm
@@ -70,17 +70,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" id="Cabo USB">
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/4-min.jpg" class="img-responsive img-rounded" alt="Cabo USB MFI Lightning Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/4-min.jpg" class="img-responsive img-rounded" alt="Cabo USB Lightning Apple A1480">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" id="Cabo USB">
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/5-min.jpg" class="img-responsive img-rounded" alt="Cabo USB Lightning Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/5-min.jpg" class="img-responsive img-rounded" alt="Cabo USB Lightning Rock RCB0411 MFi Nylon">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" id="Cabo USB">
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/6-min.jpg" class="img-responsive img-rounded" alt="Cabo USB MFI Lightning Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/6-min.jpg" class="img-responsive img-rounded" alt="Cabo USB Lightning Rock RCB0473 MFi Stepped">
               </a>
             </div>
             <div class="col-sm-3">
@@ -106,17 +106,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods">
-                <img width="464px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/2-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/2-min.jpg" class="img-responsive img-rounded" alt="Fone De Ouvido Bluetooth Awei T11">
               </a>
             </div>
             <div class="col-sm-3 img-hover"> 
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods"> 
-                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/3-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/3-min.jpg" class="img-responsive img-rounded" alt="Fone De Ouvido Auricular Para Smartphones">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" id="Earpods">
-                <img width="462px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/1-min.jpg" class="img-responsive img-rounded" alt="EarPods Apple">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/1-min.jpg" class="img-responsive img-rounded" alt="Fone De Ouvido Bluetooth Edifier W570BT">
               </a>
             </div>
             <div class="col-sm-3">
@@ -141,17 +141,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" id="Case Rock">
-                <img width="452px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/7-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/7-min.jpg" class="img-responsive img-rounded" alt="Capa Motomo iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" id="Case Rock">
-                <img width="452px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/9-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/9-min.jpg" class="img-responsive img-rounded" alt="Capa Rock iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" id="Case Rock">
-                <img width="451px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/8-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/8-min.jpg" class="img-responsive img-rounded" alt="Case Rock iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
@@ -177,17 +177,17 @@
           <div class="row">
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" id="Pelicula Anti-Spy">
-                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/10-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/10-min.jpg" class="img-responsive img-rounded" alt="Película De Vidro Mocolo 3D iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" id="Pelicula Anti-Spy">
-                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/12-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/12-min.jpg" class="img-responsive img-rounded" alt="Película De Vidro Standard iPhone">
               </a>
             </div>
             <div class="col-sm-3 img-hover">
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" id="Pelicula Anti-Spy">
-                <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/11-min.jpg" class="img-responsive img-rounded" alt="Pelicula vidro iPhone Privacidade">
+                <img width="400px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/11-min.jpg" class="img-responsive img-rounded" alt="Película De Vidro Anti-Spy iPhone">
               </a>
             </div>
             <div class="col-sm-3">
