--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -10,7 +10,7 @@
     </div>
     <div class="container-fluid">
       <div class="col-sm-4 text-center">
-        <p><a href="tel:11991356854"><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/whatsapp.png" alt="WhatsApp"> (11) 99135-6854</a></p>
+        <p><a href="https://api.whatsapp.com/send?phone=5511991356854"><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/whatsapp.png" alt="WhatsApp"> (11) 99135-6854</a></p>
       </div>
       <div class="col-sm-4 text-center">
         <p><a href="tel:1131923917"><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/phone.png" alt="Telefone"> (11) 3192-3917</a></p>
