--- a/htm/estiloprodutoout.htm
+++ b/htm/estiloprodutoout.htm
@@ -9,8 +9,8 @@
       <div id="idProdPrice<IDProduto>"><script>sF$.fnShowPrice(<PrecoNum>,<PrecoOri>,'<CodProd>',<MaxParcelasProdNum>,<IDProduto>);</script></div> 
       <div class="PriceAVistaLista"><script>sF$.fnShowParcels(<PrecoNum>,<MaxParcelasProdNum>);</script><br><script>sF$.fnMostraDescontoHome(<PrecoNum>);</script></div>
     </div>
-    <div class="DivHomeSpy hide-small"><a href="#Spy" onclick='bCascate=true;FCLib$.OpenRWD("/listaprodutos.asp?idloja=<IDLoja>&sty=9&int=1&idproduto=<IDProduto>","Disp","width=700,height=700")'>Espiar</a></div>
-    <div class="DivHomeDetails"><a href="<URLProd>">Detalhes</a></div>
+    <div class="ProdCompraHome"><FormProd><LinkComprar></FormProd></div>
+    </div>
   </div>
 </div>
 </p255>
