--- a/htm/home.htm
+++ b/htm/home.htm
@@ -90,8 +90,8 @@
                   <li>Design revers&iacute;vel</li>
                   <li>Conector Lightning de 8 pinos</li>
                   <li>Interface USB 2.0</li>
-                  <li>Comprimento: 1 metro</li>
-                  <li>Marcas: Apple e Rock(MFi)</li>
+                  <li>Comprimento: 1 metro ou 0.71 metro</li>
+                  <li>Marcas: Apple, Rock(MFi) e Baseus(MFi)</li>
                 </ul>
               </div><hr/>
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" class="btn btn-warning"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true">&nbsp;Eu quero!</i></a>
