--- a/htm/FbhAjuda.htm
+++ b/htm/FbhAjuda.htm
@@ -5,10 +5,12 @@
           <p class="EstTabTopo">O frete não está incluso nos preços e é por conta do cliente. Os pedidos somente serão postados após confirmação de pagamento. É de responsabilidade do cliente a veracidade e exatidão das informações referentes a endereços de entrega.<br><br>
           <b>DEVOLUÇÃO:</b> O cliente tem até 7 dias corridos (contados à partir da data de recebimento) para desistência de qualquer compra realizada, desde que a mercadoria esteja da mesma forma em que foi entregue (LACRADA, COM TODOS OS ITENS E EM PERFEITAS CONDIÇÕES). O cliente arcará com os custos de envio do produto para a tuning-phone® e receberá a devolução do valor pago (com exceção do frete).<br><br>
           <b>DEFEITOS DE FABRICAÇÃO:</b> O cliente tem até 30 dias corridos (contados à partir da data de recebimento) para comunicar a tuning-phone&reg; sobre qualquer vício aparente observado na mercadoria adquirida.<br>
-          Para ambos os casos, basta entrar em contato conosco, através de qualquer um dos seguintes canais:<br><br>
+          Para ambos os casos, basta entrar em contato conosco, através de qualquer um dos seguintes canais:<br>
+          <b>GARANTIA:</b> Todos os produtos possuem 90 dias de garantia à partir da data de recebimento da mercadoria.</br></br>
+          <br>
           Email: sac@tuning-phone.com.br<br>
           WhatsApp: (11) 99135-6854<br>
-          Telefone: (11) 3192-3917
+          Telefone: (11) 4081-1957
           </p>
       </td>
     </tr>
