--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -5,7 +5,7 @@
     <div class="container-fluid text-center">
       <div class="hidden-xs qrcode">
         <h4>Escaneie nosso vCard</h4>
-        <img width="150px" height="150px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/qr_code.png" alt="QRCode"/>
+        <img width="300px" height="300px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/qr_code.png" alt="QRCode"/>
       </div>
     </div>
     <div class="container-fluid">
@@ -13,7 +13,7 @@
         <p><a href="https://api.whatsapp.com/send?phone=5511991356854"><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/whatsapp.png" alt="WhatsApp"> (11) 99135-6854</a></p>
       </div>
       <div class="col-sm-4 text-center">
-        <p><a href="tel:1131923917"><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/phone.png" alt="Telefone"> (11) 3192-3917</a></p>
+        <p><a href="tel:1140811957"><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/phone.png" alt="Telefone"> (11) 4081-1957</a></p>
       </div>
       <div class="col-sm-4 text-center">
         <p><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/mail.png" alt="E-mail"><a href="mailto:sac@tuning-phone.com.br"> sac@tuning-phone.com.br</a></p>
@@ -21,7 +21,7 @@
     </div>
     <div class="container-fluid">
       <div class="col-sm-12 text-center">
-        <p><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/maps.png" alt="Mapa"> Avenida Paulista N&deg; 726, 16&deg; andar | Coworking N05 | Conjunto 1605-A | Bela Vista | S&atilde;o Paulo - SP (01310-910)</p>
+        <p><img width="32px" height="32px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/maps.png" alt="Mapa">Rua Castilho, 392 - 9&deg; Andar - Conj. 91 - Brooklin Paulista - CEP: 04568-010 - S&atilde;o Paulo/SP.</p>
       </div>
     </div>
   </div>
