--- a/htm/home.htm
+++ b/htm/home.htm
@@ -33,11 +33,11 @@
 <div>
   <div class="header text-center">
     <div>
-      <span class="text-header-1 font-custom">
+      <!--<span class="text-header-1 font-custom">
         <h1>O shopping do seu smartphone</h1>
-      </span>
+      </span>-->
     </div>
-    <span class="text-header-2">Pel&iacute;culas de vidro temperado, capas de luxo, fones de ouvido e cabos USB</span><br><br>
+    <!--<span class="text-header-2">Pel&iacute;culas de vidro temperado, capas de luxo, fones de ouvido e cabos USB</span><br><br>-->
       <div class="col-sm-12">
         <tag-FCHeaderToolBarSearch>
       </div>
