--- a/htm/home.htm
+++ b/htm/home.htm
@@ -30,18 +30,31 @@
 
 
 <!-- Begin Home -->
-<div>
-  <div class="header text-center">
-    <div>
-      <!--<span class="text-header-1 font-custom">
-        <h1>O shopping do seu smartphone</h1>
-      </span>-->
-    </div>
-    <!--<span class="text-header-2">Pel&iacute;culas de vidro temperado, capas de luxo, fones de ouvido e cabos USB</span><br><br>-->
-      <div class="col-sm-12">
-        <tag-FCHeaderToolBarSearch>
+<!-- Container Medium/Large Devices--> 
+  <div class="row carousel-holder">
+    <div id="carouselLP" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+          <li data-target="#carouselLP" data-slide-to="0" class="active"></li>
+      </ol>
+      
+      <div class="carousel-inner">
+        <div class="item active">
+            <img width="1024px" height="768px" class="img-fluid slide-image" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/tuning_phone-black_friday-v-1.png">
+        </div>
       </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#carouselLP" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carouselLP" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
+  <!-- /.container -->>
 
   <!-- Begin Banners -->
   <div id="FC-HideHomeBanners" style="display:none;">
