carrossel black friday e pesquisa

--- a/htm/home.htm
+++ b/htm/home.htm
@@ -42,21 +42,32 @@
           <li data-target="#carouselLP" data-slide-to="2"></li>
 
           <li data-target="#carouselLP" data-slide-to="3"></li>
+
+          <li data-target="#carouselLP" data-slide-to="4"></li>
+
+          <li data-target="#carouselLP" data-slide-to="5"></li>
       </ol>
       
       <div class="carousel-inner">
         <div class="item active">
-            <img width="1024px" height="426px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
         </div>
         <div class="item">
-            <img width="1024px" height="426px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
         </div>
         <div class="item">
-            <img width="1024px" height="426px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
         </div>
         <div class="item">
-            <img width="1024px" height="426px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
         </div>
+        <div class="item">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
+        </div>
+        <div class="item">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
+        </div>
+
       </div>
 
       <!-- Left and right controls -->
@@ -92,11 +103,16 @@
 
   <!-- Container (Pricing Section) -->
   <div id="produtos" class="container-fluid text-center linear-grad-products slideanim">
+    <div class="row">
+      <div class="col-sm-12">
+        <tag-FCHeaderToolBarSearch>
+      </div>
+    </div>
     <div class="row ">
       <br><br>
       <h1 class="font-custom h1-custom">PRODUTOS</h1><br/>
       <div class="text-center">
-        <h4 class="font-custom">Cabos USB Lightning para iPhone, iPad e iPod</h4>
+        <h4 class="font-custom">Cabos USB</h4>
         <div class="container-fluid bg-3">
           <div class="row">
             <div class="col-sm-3 img-hover">
@@ -118,11 +134,10 @@
               <div class="specifications">
                 <p><span class="glyphicon glyphicon-cog"></span> <strong>Especifica&ccedil;&otilde;es:</strong></p><br/>
                 <ul>
-                  <li>Design revers&iacute;vel</li>
-                  <li>Conector Lightning de 8 pinos</li>
-                  <li>Interface USB 2.0</li>
-                  <li>Comprimento: 1 metro ou 0.71 metro</li>
-                  <li>Marcas: Apple, Rock(MFi) e Baseus(MFi)</li>
+                  <li>Modelos MFi, Micro-USB e USB-C</li>
+                  <li>Interface USB 2.0 e USB 3.0</li>
+                  <li>Comprimento: 1 metro, 0.9 metro e 0.71 metro</li>
+                  <li>Marcas: Apple, Rock e Baseus</li>
                 </ul>
               </div><hr/>
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" class="btn btn-warning"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true">&nbsp;Eu quero!</i></a>
@@ -157,7 +172,7 @@
                   <li>Modelos In-ear e On-ear</li>
                   <li>Controle de &aacute;udio/chamadas</li>
                   <li>Qualidade excepcional de som</li>
-                  <li>Marcas: Edifier e Awei</li>
+                  <li>Marcas: Edifier, Awei e Rock</li>
                 </ul>
               </div><hr/>
               <a href="https://www.tuning-phone.com.br/c/fones-78252810" class="btn btn-warning"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true">&nbsp;Eu quero!</i></a>
@@ -231,7 +246,7 @@
                   <li>Resistente a riscos e impactos</li>
                   <li>Superf&iacute;cie anti-&oacute;leo</li>
                   <li>Borda de 2.5D e 3D</li>
-                  <li>Dispon&iacute;vel para iPhone 5, 5s, SE, 6, 6s, 6s Plus</li>
+                  <li>Dispon&iacute;vel para iPhone 5, 5s, SE, 6, 6s, 6s Plus, 7 e 7 Plus</li>
                   <li>Acompanha kit para limpeza/instala&ccedil;&atilde;o</li>
                 </ul>
               </div><hr/>
