--- a/htm/home.htm
+++ b/htm/home.htm
@@ -50,22 +50,22 @@
       
       <div class="carousel-inner">
         <div class="item active">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-1-min.jpg">
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-2-min.jpg">
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-3-min.jpg">
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-4-min.jpg">
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-5-min.jpg">
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/black-friday-desktop.png">
+            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-6-min.jpg">
         </div>
 
       </div>
