carrossel black friday e pesquisa

--- a/htm/home.htm
+++ b/htm/home.htm
@@ -104,11 +104,9 @@
   <!-- Container (Pricing Section) -->
   <div id="produtos" class="container-fluid text-center linear-grad-products slideanim">
     <div class="row">
-      <div class="col-sm-12">
-        <tag-FCHeaderToolBarSearch>
-      </div>
+      <tag-FCHeaderToolBarSearch>
     </div>
-    <div class="row ">
+    <div class="row">
       <br><br>
       <h1 class="font-custom h1-custom">PRODUTOS</h1><br/>
       <div class="text-center">
@@ -134,7 +132,7 @@
               <div class="specifications">
                 <p><span class="glyphicon glyphicon-cog"></span> <strong>Especifica&ccedil;&otilde;es:</strong></p><br/>
                 <ul>
-                  <li>Modelos MFi, Micro-USB e USB-C</li>
+                  <li>Modelos Lightning, Micro-USB e USB-C</li>
                   <li>Interface USB 2.0 e USB 3.0</li>
                   <li>Comprimento: 1 metro, 0.9 metro e 0.71 metro</li>
                   <li>Marcas: Apple, Rock e Baseus</li>
