--- a/htm/home.htm
+++ b/htm/home.htm
@@ -33,19 +33,19 @@
 
   <!-- Container Medium/Large Devices--> 
   <div class="hidden-xs row carousel-holder">
-    <div id="carouselLP" class="carousel slide" data-ride="carousel">
+    <div id="carrosselDesktop" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
-          <li data-target="#carouselLP" data-slide-to="0" class="active"></li>
+          <li data-target="#carrosselDesktop" data-slide-to="0" class="active"></li>
 
-          <li data-target="#carouselLP" data-slide-to="1"></li>
+          <li data-target="#carrosselDesktop" data-slide-to="1"></li>
 
-          <li data-target="#carouselLP" data-slide-to="2"></li>
+          <li data-target="#carrosselDesktop" data-slide-to="2"></li>
 
-          <li data-target="#carouselLP" data-slide-to="3"></li>
+          <li data-target="#carrosselDesktop" data-slide-to="3"></li>
 
-          <li data-target="#carouselLP" data-slide-to="4"></li>
+          <li data-target="#carrosselDesktop" data-slide-to="4"></li>
 
-          <li data-target="#carouselLP" data-slide-to="5"></li>
+          <li data-target="#carrosselDesktop" data-slide-to="5"></li>
       </ol>
       
       <div class="carousel-inner">
@@ -67,15 +67,66 @@
         <div class="item">
             <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-6-min.jpg">
         </div>
-
       </div>
 
       <!-- Left and right controls -->
-      <a class="left carousel-control" href="#carouselLP" data-slide="prev">
+      <a class="left carousel-control" href="#carrosselDesktop" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="right carousel-control" href="#carouselLP" data-slide="next">
+      <a class="right carousel-control" href="#carrosselDesktop" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <!-- /.container -->
+
+
+  <!-- Container Small Devices--> 
+  <div class="hidden-xs row carousel-holder">
+    <div id="carrosselDesktop" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+          <li data-target="#carrosselMobile" data-slide-to="0" class="active"></li>
+
+          <li data-target="#carrosselMobile" data-slide-to="1"></li>
+
+          <li data-target="#carrosselMobile" data-slide-to="2"></li>
+
+          <li data-target="#carrosselMobile" data-slide-to="3"></li>
+
+          <li data-target="#carrosselMobile" data-slide-to="4"></li>
+
+          <li data-target="#carrosselMobile" data-slide-to="5"></li>
+      </ol>
+      
+      <div class="carousel-inner">
+        <div class="item active">
+            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-1-min.jpg">
+        </div>
+        <div class="item">
+            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-2-min.jpg">
+        </div>
+        <div class="item">
+            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-3-min.jpg">
+        </div>
+        <div class="item">
+            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-4-min.jpg">
+        </div>
+        <div class="item">
+            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-5-min.jpg">
+        </div>
+        <div class="item">
+            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-6-min.jpg">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#carrosselMobile" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carrosselDesktop" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -103,9 +154,6 @@
 
   <!-- Container (Pricing Section) -->
   <div id="produtos" class="container-fluid text-center linear-grad-products slideanim">
-    <div class="row">
-      <tag-FCHeaderToolBarSearch>
-    </div>
     <div class="row">
       <br><br>
       <h1 class="font-custom h1-custom">PRODUTOS</h1><br/>
