--- a/htm/home.htm
+++ b/htm/home.htm
@@ -84,7 +84,7 @@
 
 
   <!-- Container Small Devices--> 
-  <div class="hidden-xs row carousel-holder">
+  <div class="visible-xs row carousel-holder">
     <div id="carrosselDesktop" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
           <li data-target="#carrosselMobile" data-slide-to="0" class="active"></li>
