--- a/htm/home.htm
+++ b/htm/home.htm
@@ -85,7 +85,7 @@
 
   <!-- Container Small Devices--> 
   <div class="visible-xs row carousel-holder">
-    <div id="carrosselDesktop" class="carousel slide" data-ride="carousel">
+    <div id="carrosselMobile" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
           <li data-target="#carrosselMobile" data-slide-to="0" class="active"></li>
 
@@ -126,7 +126,7 @@
         <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="right carousel-control" href="#carrosselDesktop" data-slide="next">
+      <a class="right carousel-control" href="#carrosselMobile" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
         <span class="sr-only">Next</span>
       </a>
