--- a/htm/home.htm
+++ b/htm/home.htm
@@ -50,22 +50,22 @@
       
       <div class="carousel-inner">
         <div class="item active">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-1-min.jpg">
+            <a href="/prod,idloja,<IDLojaNum>,promocao,1,ofertas.htm"><img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-1-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-2-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/capas-78428286"><img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-2-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-3-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/fones-78252810"><img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-3-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-4-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/fones-78252810"><img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-4-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-5-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/peliculas-56515139"><img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-5-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-6-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/cabos-36814517"><img width="1024px" height="424px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-desktop-6-min.jpg"></a>
         </div>
       </div>
 
@@ -102,22 +102,22 @@
       
       <div class="carousel-inner">
         <div class="item active">
-            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-1-min.jpg">
+            <a href="/prod,idloja,<IDLojaNum>,promocao,1,ofertas.htm"><img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-1-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-2-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/capas-78428286"><img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-2-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-3-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/fones-78252810"><img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-3-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-4-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/fones-78252810"><img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-4-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-5-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/peliculas-56515139"><img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-5-min.jpg"></a>
         </div>
         <div class="item">
-            <img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-6-min.jpg">
+            <a href="https://www.tuning-phone.com.br/c/cabos-36814517"><img width="768px" height="450px" class="img-fluid slide-image header" src="https://www.rumo.com.br/lojas/000<IdLojaNum>/images/carrossel-mobile-6-min.jpg"></a>
         </div>
       </div>
 
