--- a/htm/home.htm
+++ b/htm/home.htm
@@ -250,11 +250,10 @@
               <div class="specifications">
                 <p><span class="glyphicon glyphicon-cog"></span> <strong>Especifica&ccedil;&otilde;es:</strong></p><br/>
                 <ul>
-                  <li>Constru&iacute;da em PC/TPU</li>
+                  <li>Modelos constru&iacute;dos em PC/TPU ou Silicone</li>
                   <li>Resistente &agrave; corros&atilde;o, desgaste e sujeira</li>
-                  <li>Dispon&iacute;vel em 6 cores: Champagne-Gold, Navy-Blue, Iron-Gray, Rose-Gold, Red e Black</li>
+                  <li>Dispon&iacute;vel em diversas cores</li>
                   <li>Dispon&iacute;vel para iPhone 5, 5s, SE, 6, 6s, 6s Plus, 7 e 7 Plus</li>
-                  <li>Marcas: Motomo e Mocolo</li>
                 </ul>
               </div><hr/>
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" type="button" class="btn btn-warning"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true">&nbsp;Eu quero!</i></a>
