--- a/htm/home.htm
+++ b/htm/home.htm
@@ -434,6 +434,8 @@
               <li><img width="80px" height="50px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/maestro.png"></li>
 
               <li><img width="80px" height="51px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/boleto.png"></li>
+
+              <li><img width="80px" height="50px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/paypal.png"></li>
           </ul>
         </div>
       </div>
