--- a/htm/home.htm
+++ b/htm/home.htm
@@ -183,7 +183,7 @@
                   <li>Modelos Lightning, Micro-USB e USB-C</li>
                   <li>Interface USB 2.0 e USB 3.0</li>
                   <li>Comprimento: 1 metro, 0.9 metro e 0.71 metro</li>
-                  <li>Marcas: Apple, Rock e Baseus</li>
+                  <li>Marcas: Apple, Rock, Baseus, Anker e Aukey</li>
                 </ul>
               </div><hr/>
               <a href="https://www.tuning-phone.com.br/c/cabos-36814517" class="btn btn-warning"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true">&nbsp;Eu quero!</i></a>
