--- a/htm/home.htm
+++ b/htm/home.htm
@@ -254,6 +254,7 @@
                   <li>Resistente &agrave; corros&atilde;o, desgaste e sujeira</li>
                   <li>Dispon&iacute;vel em diversas cores</li>
                   <li>Dispon&iacute;vel para iPhone 5, 5s, SE, 6, 6s, 6s Plus, 7 e 7 Plus</li>
+                  <li>Marcas: Rock, Motomo e Jamular</li>
                 </ul>
               </div><hr/>
               <a href="https://www.tuning-phone.com.br/c/capas-78428286" type="button" class="btn btn-warning"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true">&nbsp;Eu quero!</i></a>
@@ -293,6 +294,7 @@
                   <li>Borda de 2.5D e 3D</li>
                   <li>Dispon&iacute;vel para iPhone 5, 5s, SE, 6, 6s, 6s Plus, 7 e 7 Plus</li>
                   <li>Acompanha kit para limpeza/instala&ccedil;&atilde;o</li>
+                  <li>Motomo, Mocolo e muito mais</li>
                 </ul>
               </div><hr/>
               <a href="https://www.tuning-phone.com.br/c/peliculas-56515139" type="button" class="btn btn-warning"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true">&nbsp;Eu quero!</i></a>
